# isma-core

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ISMA_PROSE_RETRIEVAL_SPEC.md  KNOWN_FINDINGS.md  LICENSE  MEMORY_GOVERNANCE.md  README.md  docker-compose.yml  nginx-lb.conf  pyproject.toml  requirements.txt  server.py  start-2-per-spark.sh  start-local.sh  start-multi.sh  start-sequential.sh  start.sh
audit_logs/: branch_eval_authority_v2.md  p4_production_evidence.md  p6_family.md  p6_grok.md
benchmarks/: authority_probe.py  beir_eval.py
benchmarks/results/: authority_probe.json  authority_probe.md  scifact.json
demo/: setup_demo.py
demo/corpus/: README.md
docs/: ARCHITECTURE_AND_USE_CASE.md  ISMA_USAGE.md
isma/: __init__.py  config.py  requirements.txt
isma/reports/: baseline_benchmark.json
isma/scripts/: backfill_md_corpus.py  benchmark_retrieval.py  colbert_retrieval.py  decay_sweep.py  embed_canary_healthcheck.sh  hmm_package_builder.py  hmm_store_results.py  ingest_md_file.py  nightly_ingest.py  phi_tiling.py  watch_md_corpus.sh
isma/src/: __init__.py  agentic_retry.py  breathing_cycle.py  contradiction_detector.py  functional_lens.py  isma_core.py  mcp_server.py  phi_tiling.py  provenance_scorer.py  query_api.py  query_classifier.py  relational_lens.py  relational_retrieval.py  reranker.py  retrieval.py  retrieval_v2.py  semantic_cache.py  temporal_lens.py  temporal_query.py
isma/src/hmm/: __init__.py  eventlog.py  gate_b.py  ids.py  motifs.py  neo4j_store.py  query.py  redis_store.py
tests/: test_correction_status_extension.py
